--- a/part2/phonebook/src/index.css
+++ b/part2/phonebook/src/index.css
@@ -1,4 +1,4 @@
-.notification
+.add
 {
     color: #037b4f;
     background-color: #efefef;
@@ -6,4 +6,14 @@
     font-size: 25px;
     padding: 5px;
     margin-bottom:10px ;
+}
+
+.failed-removing
+{
+    color: red;
+    font-size: 25px;
+    background-color: beige;
+    border: 3px blue solid;
+    padding: 5px;
+    margin-bottom: 10px;
 }
